--- a/ExViewer/Controls/CommentViewer.xaml
+++ b/ExViewer/Controls/CommentViewer.xaml
@@ -229,7 +229,7 @@
                Opened="VotePopUp_Opened">
             <Popup.ChildTransitions>
                 <TransitionCollection>
-                    <PopupThemeTransition />
+                    <PopupThemeTransition FromVerticalOffset="-24" />
                 </TransitionCollection>
             </Popup.ChildTransitions>
             <Grid BorderThickness="1"
