--- a/ExViewer/Themes/NamedStyles.xaml
+++ b/ExViewer/Themes/NamedStyles.xaml
@@ -104,7 +104,7 @@
         <Setter Property="TextTrimming"
                 Value="CharacterEllipsis" />
         <Setter Property="TextWrapping"
-                Value="NoWrap" />
+                Value="Wrap" />
     </Style>
 
     <Style x:Key="TextBlockToggleSwitchStyle"
