--- a/ExViewer/Views/EhWikiDialog.xaml
+++ b/ExViewer/Views/EhWikiDialog.xaml
@@ -1,8 +1,9 @@
-﻿<ContentDialog x:Class="ExViewer.Views.EhWikiDialog"
+﻿<controls:MyContentDialog x:Class="ExViewer.Views.EhWikiDialog"
                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                xmlns:local="using:ExViewer.Views"
+               xmlns:controls="using:ExViewer.Controls"
                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                x:Uid="Views/EhWikiDialog/ContentDialog"
                Title="TITLE"
@@ -21,4 +22,4 @@
                      VerticalAlignment="Top"
                      IsIndeterminate="True" />
     </Grid>
-</ContentDialog>
+</controls:MyContentDialog>
