--- a/ExViewer/Views/LogOnDialog.xaml
+++ b/ExViewer/Views/LogOnDialog.xaml
@@ -1,7 +1,8 @@
-﻿<ContentDialog x:Class="ExViewer.Views.LogOnDialog"
+﻿<controls:MyContentDialog x:Class="ExViewer.Views.LogOnDialog"
                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                xmlns:local="using:ExViewer"
+               xmlns:controls="using:ExViewer.Controls"
                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                mc:Ignorable="d"
@@ -208,4 +209,4 @@
                          VerticalAlignment="Top" />
         </Grid>
     </StackPanel>
-</ContentDialog>
+</controls:MyContentDialog>
